# suzuri

./: .envrc  .gitignore  .ignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  config.toml  diesel.toml  flake.nix  input.css  tailwind.config.js  todo.org
legacy/: Cargo.toml  input.css
legacy/migrations/: 20231002182355_dicts.up.sql  20231015123127_terms_index.down.sql  20231125200326_add_cards.up.sql  20231126164730_terms_dict_index.up.sql
legacy/src/: config.rs  epub.rs  furi.rs  golden.rs  handlers.rs  main.rs
legacy/src/dart/: builder.rs  mod.rs  searcher.rs
legacy/src/dict/: mod.rs
legacy/src/morph/: blob.rs  dart.rs  userdict.rs
migrations/: 1_create_lvs.down.sql  1_create_lvs.up.sql  20231002182355_dicts.down.sql  20231002182355_dicts.up.sql  20231015123127_terms_index.up.sql  20231124192337_add_surface_forms.up.sql  20231124200917_add_freqs.up.sql  20231208113340_init.down.sql  20231208113340_init.up.sql  2_add_lvs_cts_idxs.down.sql  2_add_lvs_cts_idxs.up.sql  2_enrich_lvs.down.sql  2_enrich_lvs.up.sql  3_create_defs.down.sql  3_create_defs.up.sql  4_add_defs_cts_idxs.down.sql  4_add_defs_cts_idxs.up.sql  4_enrich_defs.down.sql  4_enrich_defs.up.sql  5_create_docs_lines.down.sql  5_create_docs_lines.up.sql  6_enrich_docs_lines.down.sql  6_enrich_docs_lines.up.sql  7_add_srs.down.sql  7_add_srs.up.sql
migrations/2023-11-28-004136_create_lemmas/: down.sql  up.sql
migrations/2023-11-28-004136_create_terms/: down.sql  up.sql
migrations/2023-12-02-103929_add_defs/: down.sql  up.sql
src/: epub.rs  furi.rs  handlers.rs  main.rs  unidic.rs
src/app/: mod.rs
src/app/tpl/: mod.rs
src/dict/: dict.rs  yomichan.rs
src/morph/: dart.rs  io.rs  mod.rs  unkchar.rs  userdict.rs
src/morph/features/: mod.rs  types.rs
src/tokeniser/: blob.rs  dart.rs  file.rs  io.rs  mod.rs  pathing.rs  unkchar.rs  userdict.rs
src/unidic/: types.rs
static/: handlers.js  input.css
szr_bulk_insert/: Cargo.toml
szr_bulk_insert/src/: lib.rs
szr_dict/: Cargo.toml
szr_dict/src/: lib.rs
szr_diesel_logger/: Cargo.toml
szr_diesel_logger/src/: lib.rs
szr_diesel_macros/: Cargo.toml
szr_diesel_macros/src/: lib.rs
szr_epub/: Cargo.toml
szr_epub/src/: lib.rs
szr_epub/src/tests/input/: aozorabunko_00301.epub
szr_features/: Cargo.toml
szr_features/src/: lib.rs  types.rs
szr_golden/: Cargo.toml
szr_golden/src/: lib.rs
szr_gpui/: Cargo.toml
szr_gpui/src/: main.rs
szr_html/: Cargo.toml
szr_html/src/: lib.rs
szr_ja_utils/: Cargo.toml
szr_ja_utils/src/: lib.rs
szr_jagger/: Cargo.toml
szr_jagger/src/: lib.rs
szr_morph/: Cargo.toml
szr_morph/src/: blob.rs  dart.rs  hasher.rs  io.rs  lib.rs  unkchar.rs  userdict.rs
szr_ruby/: Cargo.toml
szr_ruby/src/: lib.rs
szr_schema/: Cargo.toml
szr_schema/src/: lib.rs
szr_srs/: Cargo.toml
szr_srs/src/: lib.rs  memory_status.rs  mneme.rs  mneme_state.rs  params.rs  review_grade.rs  tests.rs  weights.rs
szr_srs/src/golden/: test_interval_history_delayed_rounded.json  test_interval_history_on_time_rounded.json  test_interval_history_on_time_true.json
szr_srs/src/tests/golden/: test_interval_history_delayed_rounded.json  test_interval_history_delayed_true.json  test_interval_history_on_time_rounded.json  test_interval_history_on_time_true.json
szr_templates/: Cargo.toml
szr_templates/src/: lib.rs
szr_textual/: Cargo.toml
szr_textual/src/: lib.rs
szr_tokenise/: Cargo.toml
szr_tokenise/src/: lib.rs
szr_types/: Cargo.toml
szr_utils/: Cargo.toml
szr_utils/src/: lib.rs
szr_vaporetto/: Cargo.toml
szr_vaporetto/src/: lib.rs
szr_web/: Cargo.toml
szr_web/src/: handlers.rs  layout.rs  lemma.rs  main.rs  models.rs  prelude.rs  schema.rs  term.rs
szr_web/src/srs_ui/: handlers.rs
szr_yomichan/: Cargo.toml
szr_yomichan/src/: lib.rs
