[package]
name = "szr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
libepub = { package = "epub", version = "2.1.1" }
figment = { version = "0.10.12", features = ["toml"] }
glob = "0.3.1"
hashbrown = "0.14.2"
memmap = "0.7.0"
rayon = "1.8.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["json"] }
tl = { version = "0.7.7", features = ["simd"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing-timing = "0.6.0"
sha2 = "0.10.8"
snafu = "0.7.5"
regex = "1.10.2"
pretty_assertions = "1.4.0"
yansi = "0.5.1"
upon = "0.8.0"
once_cell = "1.18.0"
memory-stats = "1.1.0"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "chrono", "uuid"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
actix-web = "4.4.0"
tracing-actix-web = "0.7.9"
actix-files = "0.6.2"
indexmap = "2.1.0"
fsrs = { path = "../rs-fsrs", version = "0.0.1" }
chrono = "0.4.31"
