[workspace]
members = ["szr_web"]
resolver = "2"

[workspace.dependencies]
szr_dict.path = "szr_dict"
szr_diesel_logger.path = "szr_diesel_logger"
szr_diesel_macros.path = "szr_diesel_macros"
szr_features.path = "szr_features"
szr_golden.path = "szr_golden"
szr_ja_utils.path = "szr_ja_utils"
szr_morph.path = "szr_morph"
szr_ruby.path = "szr_ruby"
szr_schema.path = "szr_schema"
szr_tokenise.path = "szr_tokenise"
szr_yomichan.path = "szr_yomichan"
szr_epub.path = "szr_epub"
szr_html.path = "szr_html"

axum = " 0.7.2"
# actix-files = "0.6.2"
# actix-web = "4.4.0"
chrono = "0.4.31"
csv = "1.3.0"
diesel = { version = "2.1.4", features = [
  # disabling default-features disables 32-column tables,
  # which saves about 5 whole seconds of compile time
  "postgres",
  "serde_json",
], default-features = false }
diesel-derive-newtype = "2.1.0"
libepub = { package = "epub", version = "2.1.1" }
# figment = { version = "0.10.12", features = ["toml"] }
glob = "0.3.1"
# hashbrown = "0.14.2"
# indexmap = "2.1.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
memmap = "0.7.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
rayon = "1.8.0"
regex = { version = "1.10.2", features = [
  # for \p{Han} and so on
  "unicode-gencat",
], default-features = false }
serde_json = { version = "1.0.108", features = ["raw_value"] }
serde = { version = "1.0.193", features = ["derive"] }
# serde_with = { version = "3.4.0", features = ["json"] }
sha2 = "0.10.8"
snafu = { version = "0.7.5", features = ["backtrace"] }
test-log = { version = "0.2.13", features = [
  "trace",
], default-features = false }
time = { version = "0.3.30", features = [
  "formatting",
  # for localtime timestamps in tracing output
  "local-offset",
  "serde",
  "serde-human-readable",
  "macros",
] }
tl = { version = "0.7.7", features = ["simd"] }
tracing = "0.1.40"
# tracing-actix-web = "0.7.9"
# tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "time",
  "local-time",
] }
tokio = { version = "1", features = ["full"] }
# tracing-timing = "0.6.0"
upon = "0.8.0"
yansi = "0.5.1"
