[workspace]
members = ["szr_web"]
resolver = "2"

[workspace.dependencies]
szr_dict.path = "szr_dict"
szr_features.path = "szr_features"
szr_golden.path = "szr_golden"
szr_ja_utils.path = "szr_ja_utils"
szr_morph.path = "szr_morph"
szr_ruby.path = "szr_ruby"
szr_tokenise.path = "szr_tokenise"
szr_yomichan.path = "szr_yomichan"
szr_epub.path = "szr_epub"
szr_html.path = "szr_html"
szr_bulk_insert.path = "szr_bulk_insert"
szr_srs.path = "szr_srs"
szr_utils.path = "szr_utils"
szr_textual.path = "szr_textual"

# everything else

axum = " 0.7.2"
# actix-files = "0.6.2"
# actix-web = "4.4.0"
chrono = { version = "0.4.31", features = [ "serde" ] }
csv = "1.3.0"
libepub = { package = "epub", version = "2.1.1" }
# figment = { version = "0.10.12", features = ["toml"] }
glob = "0.3.1"
# hashbrown = "0.14.2"
# indexmap = "2.1.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
memmap = "0.7.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
rayon = "1.8.0"
regex = { version = "1.10.2", features = [
  # for \p{Han} and so on
  "unicode-gencat",
], default-features = false }
serde_json = { version = "1.0.108", features = ["raw_value", "float_roundtrip"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
# serde_with = { version = "3.4.0", features = ["json"] }
sha2 = "0.10.8"
snafu = { version = "0.7.5", features = ["backtrace"] }
test-log = { version = "0.2.13", features = [
  "trace",
], default-features = false }
time = { version = "0.3.30", features = [
  "formatting",
  # for localtime timestamps in tracing output
  "local-offset",
  "serde",
  "serde-human-readable",
  "macros",
] }
tl = { version = "0.7.7", features = [
# doesn't work at the moment
# "simd"
] }
tracing = "0.1.40"
# tracing-actix-web = "0.7.9"
# tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "time",
  "local-time",
] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["fs"] }
# tracing-timing = "0.6.0"
upon = "0.8.0"
yansi = "0.5.1"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "json", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6.1", features = ["serde", "fast-rng", "v4"] }

tracing-opentelemetry = { version = "0.22.0" }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = { version ="0.20.0", features = ["rt-tokio"]}

async-trait = "0.1.74"

futures = { version = "0.3.29" }
