[package]
name = "szr_bulk_insert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx.workspace = true
csv.workspace = true
tracing.workspace = true
snafu.workspace = true
async-trait.workspace = true
serde.workspace = true
