[package]
name = "szr_dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
szr_schema = { path = "../szr_schema" }
szr_diesel_macros = { path = "../szr_diesel_macros" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
