[package]
name = "szr_dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel.workspace = true
szr_schema.workspace = true
szr_diesel_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
