[package]
name = "szr_dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
snafu.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
async-trait.workspace = true
csv.workspace = true
