[package]
name = "szr_diesel_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = [
    "r2d2",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
tracing.workspace = true
