[package]
name = "szr_epub"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libepub = { package = "epub", version = "2.1.1" }
tl = { version = "0.7.7", features = ["simd"] }
sha2 = "0.10.8"
snafu = "0.7.5"
tracing = "0.1.40"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
szr_golden = { path = "../szr_golden" }
glob = "0.3.1"
