[package]
name = "szr_epub"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
szr_golden.workspace = true
szr_textual.workspace = true
szr_tokenise.workspace = true
szr_features.workspace = true

sqlx.workspace = true
libepub.workspace = true
tl.workspace = true
sha2.workspace = true
snafu.workspace = true
tracing.workspace = true
regex.workspace = true
serde.workspace = true
glob.workspace = true
