[package]
name = "szr_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = "1.0.193"
serde_json = "1.0.108"
tracing = "0.1.40"
szr_morph = { path = "../szr_morph" }
szr_tokenise = { path = "../szr_tokenise" }
snafu = "0.7.5"
