[package]
name = "szr_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
szr_morph.workspace = true
szr_tokenise.workspace = true
snafu.workspace = true
