[package]
name = "szr_golden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
pretty_assertions = "1.4.0"
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
upon.workspace = true
yansi.workspace = true
