[package]
name = "szr_ruby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
szr_ja_utils.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
itertools.workspace = true
lazy_static.workspace = true
snafu.workspace = true
