[package]
name = "szr_srs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
snafu.workspace = true
chrono.workspace = true
sqlx.workspace = true
serde.workspace = true
szr_golden.workspace = true
