[package]
name = "szr_textual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
szr_bulk_insert.workspace = true
szr_tokenise.workspace = true

sqlx.workspace = true
tracing.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
