[package]
name = "szr_tokenise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true
tracing.workspace = true
serde.workspace = true
serde_tuple.workspace = true
uuid.workspace = true
