[package]
name = "szr_web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
szr_features.workspace = true
szr_morph.workspace = true
szr_tokenise.workspace = true
szr_yomichan.workspace = true
szr_ja_utils.workspace = true
szr_ruby.workspace = true
szr_epub.workspace = true
szr_dict.workspace = true
szr_html.workspace = true
szr_bulk_insert.workspace = true
szr_srs.workspace = true

axum.workspace = true
csv.workspace = true
futures.workspace = true
itertools.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
sqlx.workspace = true
test-log.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
