[package]
name = "szr_yomichan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
szr_ja_utils = { path = "../szr_ja_utils" }
szr_schema = { path = "../szr_schema" }
szr_dict = { path = "../szr_dict" }
szr_diesel_macros = { path = "../szr_diesel_macros" }
itertools = "0.12.0"
rayon = "1.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
snafu = "0.7.5"
tracing = "0.1.40"
glob = "0.3.1"
diesel = { version = "2.1.4", features = ["postgres", "serde_json"] }
