[package]
name = "szr_yomichan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
szr_ja_utils.workspace = true
szr_dict.workspace = true
itertools.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
glob.workspace = true
